# 3DSEMUCITRA

./: .gitignore  .gitmodules  4rjb2vnw.250.txt  CMakeLists.txt  CONTRIBUTING.md  appveyor.yml  citra.nuspec
src/: CMakeLists.txt  diff.txt  formatter.sh
src/audio_core/: CMakeLists.txt  audio_core.cpp  audio_core.h  codec.cpp  codec.h  dsp.cpp  interpolate.cpp  interpolate.h  null_sink.cpp  null_sink.h  sdl2_sink.cpp  sdl2_sink.h  sink.h  sink_details.cpp  sink_details.h  time_stretch.cpp  time_stretch.h
src/audio_core/hle/: common.h  dsp.cpp  dsp.h  filter.cpp  filter.h  mixers.cpp  mixers.h  pipe.cpp  pipe.h  sdl2_sink.cpp  source.cpp  source.h
src/citra/: CMakeLists.txt  citra.cpp  citra.rc  config.cpp  config.h  default_ini.h  resource.h
src/citra/emu_window/: emu_window_sdl2.cpp  emu_window_sdl2.h
src/citra_qt/: CMakeLists.txt  Info.plist  bootmanager.cpp  bootmanager.h  cheat_gui.cpp  cheat_gui.h  cheat_gui.ui  citra-qt.rc  config.cpp  config.h  configure.ui  configure_audio.cpp  configure_audio.h  configure_audio.ui  configure_debug.cpp  configure_debug.h  configure_debug.ui  configure_dialog.cpp  configure_dialog.h  configure_general.cpp  configure_general.h  configure_general.ui  configure_graphics.cpp  configure_graphics.h  configure_graphics.ui  configure_input.cpp  configure_input.h  configure_input.ui  configure_layout.cpp  configure_layout.h  configure_layout.ui  configure_system.cpp  configure_system.h  configure_system.ui  game_list.cpp  game_list.h  game_list_p.h  hotkeys.cpp  hotkeys.h  hotkeys.ui  (+11 more)
src/citra_qt/debugger/: callstack.cpp  callstack.h  callstack.ui  disassembler.cpp  disassembler.h  disassembler.ui  graphics.cpp  graphics.h  graphics_breakpoint_observer.cpp  graphics_breakpoint_observer.h  graphics_breakpoints.cpp  graphics_breakpoints.h  graphics_breakpoints_p.h  graphics_cmdlists.cpp  graphics_cmdlists.h  graphics_surface.cpp  graphics_surface.h  graphics_tracing.cpp  graphics_tracing.h  graphics_vertex_shader.cpp  graphics_vertex_shader.h  profiler.cpp  profiler.h  profiler.ui  ramview.cpp  ramview.h  registers.cpp  registers.h  registers.ui
src/citra_qt/util/: spinbox.cpp  spinbox.h  util.cpp  util.h
src/common/: CMakeLists.txt  alignment.h  assert.h  bit_field.h  bit_set.h  break_points.cpp  break_points.h  chunk_file.h  code_block.h  color.h  common_funcs.h  common_paths.h  common_types.h  emu_window.cpp  emu_window.h  file_util.cpp  file_util.h  framebuffer_layout.cpp  framebuffer_layout.h  hash.cpp  hash.h  linear_disk_cache.h  math_util.h  memory_util.cpp  memory_util.h  microprofile.cpp  microprofile.h  microprofileui.h  misc.cpp  motion_emu.cpp  platform.h  profiler.cpp  profiler_reporting.h  scm_rev.cpp  scm_rev.h  scope_exit.h  string_util.cpp  string_util.h  swap.h  symbols.cpp  (+8 more)
src/common/logging/: backend.cpp  backend.h  filter.cpp  filter.h  log.h  text_formatter.cpp  text_formatter.h
src/common/x64/: abi.cpp  abi.h  cpu_detect.cpp  cpu_detect.h  emitter.cpp  emitter.h
src/core/: CMakeLists.txt  cheat_core.cpp  cheat_core.h  core.cpp  memory.cpp  memory.h  settings.cpp  settings.h  system.cpp
src/core/aes/: aes.cpp  aes.h  aes_imp.cpp  aes_secret.cpp
src/core/arm/dynarmic/: arm_dynarmic.cpp
src/core/arm/dyncom/: arm_dyncom_interpreter.cpp
src/core/file_sys/: archive_backend.cpp  archive_backend.h  archive_extsavedata.cpp  archive_romfs.cpp  archive_romfs.h  archive_savedata.cpp  archive_sdmc.cpp  archive_sdmc.h  archive_sdmcwriteonly.cpp  archive_sdmcwriteonly.h  archive_systemsavedata.cpp  directory_backend.h  disk_archive.cpp  disk_archive.h  file_backend.h  ivfc_archive.cpp  ivfc_archive.h  path_parser.cpp  path_parser.h  savedata_archive.cpp  savedata_archive.h
src/core/gdbstub/: gdbstub.cpp
src/core/hle/: config_mem.cpp  config_mem.h  core.cpp  result.h  svc.cpp  svc.h
src/core/hle/applets/: applet.cpp  applet.h  mii_selector.h  swkbd.cpp  swkbd.h
src/core/hle/kernel/: event.cpp  event.h  kernel.cpp  kernel.h  memory.cpp  session.cpp  session.h  thread.cpp  thread.h  timer.h
src/core/hle/service/: ac_u.cpp  dsp_dsp.cpp  dsp_dsp.h  err_f.cpp  gsp_gpu.cpp  ldr_ro.cpp  mic_u.cpp  mic_u.h  nwm_uds.cpp  service.h  service_wrapper.h  soc_u.cpp  srv.cpp  y2r_u.cpp
src/core/hle/service/apt/: apt.cpp  apt.h  apt_a.cpp  apt_s.cpp  apt_u.cpp
src/core/hle/service/boss/: boss.cpp  boss_u.cpp
src/core/hle/service/cam/: cam.cpp  cam.h  cam_u.cpp  impl.h  impl_dummy.cpp  (+1 more)
src/core/hw/: camera.cpp  camera.h  gpu.cpp  hw.cpp  y2r.h
src/core/loader/: ncch.cpp  ncch.h
src/input_core/: CMakeLists.txt  input_core.cpp  input_core.h  key_map.cpp  key_map.h
src/input_core/devices/: device.cpp  device.h  gamecontrollerdb.h  keyboard.cpp  keyboard.h  sdl_gamepad.cpp  sdl_gamepad.h
src/tests/: CMakeLists.txt
src/tests/core/arm/: arm_test_common.cpp
src/tests/core/arm/dyncom/: arm_dyncom_tests.cpp
src/tests/core/file_sys/: path_parser.cpp
src/updater/: CMakeLists.txt  citra.nuspec  tagname.cpp  tagname.cpp.in  tagname.h  updater.cpp  updater.manifest  updater.rc
src/video_core/: CMakeLists.txt  clipper.cpp  clipper.h  command_processor.cpp  command_processor.h  gl_rasterizer.cpp  gpu_debugger.h  pica.cpp  pica.h  pica_state.h  pica_types.h  primitive_assembly.cpp  primitive_assembly.h  rasterizer.cpp  rasterizer.h  rasterizer_interface.h  renderer_base.cpp  renderer_base.h  swrasterizer.cpp  swrasterizer.h  utils.h  vertex_loader.cpp  vertex_loader.h  video_core.cpp  video_core.h
src/video_core/debug_utils/: debug_utils.cpp  debug_utils.h
src/video_core/filtering/: texture_filterer.cpp  texture_filterer.h
src/video_core/filtering/xbrz/: config.h  xbrz.cpp  xbrz.h
src/video_core/renderer_opengl/: gl_rasterizer.cpp  gl_rasterizer.h  gl_rasterizer_cache.cpp  gl_rasterizer_cache.h  gl_resource_manager.h  gl_shader_gen.cpp  gl_shader_gen.h  gl_shader_util.cpp  gl_shader_util.h  gl_state.cpp  gl_state.h  pica_to_gl.h  renderer_opengl.cpp  renderer_opengl.h
src/video_core/shader/: shader.cpp  shader.h  shader_interpreter.cpp  shader_interpreter.h  shader_jit_x64.cpp  shader_jit_x64.h
(+22 files in other folders)
